--- a/index.html
+++ b/index.html
@@ -15,5 +15,64 @@
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      const footerStyles = {
+        backgroundColor: '#7c9496',
+        color: '#ffffff',
+        padding: '20px',
+        textAlign: 'center',
+        marginTop: '20px',
+        borderRadius: '5px',
+        opacity: 0.8,
+      };
+
+      const buttonStyle = {
+        margin: '10px',
+        padding: '10px 20px',
+        backgroundColor: '#7c9496',
+        color: '#ffffff',
+        border: 'none',
+        borderRadius: '5px',
+        display: 'flex',
+        alignItems: 'center',
+        justifyContent: 'center',
+        cursor: 'pointer',
+        fontSize: '16px',
+      };
+
+      const imageStyle = {
+        marginRight: '10px',
+        width: '300px',
+        height: '300px',
+      };
+
+      const headerStyles = {
+        backgroundColor: '#7c9496',
+        color: '#ffffff',
+        padding: '20px',
+        textAlign: 'center',
+        marginBottom: '20px',
+        borderRadius: '5px',
+        opacity: 0.8,
+      };
+
+      const postStyles = {
+        marginBottom: '20px',
+        padding: '20px',
+        border: '1px solid #ddd',
+        borderRadius: '5px',
+        backgroundColor: '#ffffff',
+        opacity: 0.8,
+      };
+
+      const postTitleStyles = {
+        fontSize: '30px',
+        marginBottom: '10px',
+      };
+
+      const postContentStyles = {
+        fontSize: '22px',
+      };
+    </script>
   </body>
 </html>
