feat: Set up ReactDOM rendering for the Blog component

--- a/index.html
+++ b/index.html
@@ -353,6 +353,9 @@
       Blog.propTypes = {
         title: PropTypes.string,
       };
+
+      const root = ReactDOM.createRoot(document.getElementById('root'));
+      root.render(<Blog />);
     </script>
   </body>
 </html>
