--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script>
+    <script type="text/babel">
       const Header = () => {
         const [isMobile, setIsMobile] = React.useState(window.innerWidth < 768);
 
