--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
           document.body.style.margin = '20px';
           document.body.style.fontFamily = 'Arial, sans-serif';
           document.body.style.backgroundImage = `url('./page_resources/bg.png')`;
-          document.body.style.backgroundSize = 'fit';
+          document.body.style.backgroundSize = '100% 100%';
           document.body.style.backgroundRepeat = 'no-repeat';
           document.body.style.backgroundPosition = 'center';
           document.body.style.height = '100%';
